Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: key-value-app-service
spec:
  selector:
    app: key-value-app-deployment
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
