Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: key-value-app-ingress
spec:
  rules:
  - host: service.abc.com
    http:
      paths:
      - backend:
          serviceName: key-value-app-service
          servicePort: 5000
        path: /
